--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.9",
     "aws-sdk": "^2.1275.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "gle": "^1.0.3",
