--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "aspect-ratio": "^2.1.1",
     "aws-sdk": "^2.1275.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
