--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.jsx", "pages/_app.jsx", "pages/about.jsx", "components/Slider.jsx", "components/Hero.jsx", "components/Contact.jsx", "components/About.jsx", "components/ServicesCard.jsx"],
   "exclude": ["node_modules"]
 }
