--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@types/mapbox-gl": "^2.7.10",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -19,16 +21,22 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "gle": "^1.0.3",
+    "gli": "^0.0.1",
     "mapbox": "^1.0.0-beta10",
     "mongoose": "^6.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-map-gl": "^7.0.20",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "use-mapbox-gl": "^2.2.2"
   },
   "devDependencies": {
+    "@types/slick-carousel": "^1.6.37",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
