--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gle": "^1.0.3",
     "gli": "^0.0.1",
     "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^2.11.1",
     "mongoose": "^6.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
