--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "animated": "^0.2.2",
     "aspect-ratio": "^2.1.1",
     "aws-sdk": "^2.1275.0",
     "axios": "^1.2.1",
@@ -26,10 +27,11 @@
     "mapbox-gl": "^2.11.1",
     "mongoose": "^6.8.0",
     "next": "13.0.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.6.1",
     "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0",
     "typescript": "4.9.4",
