--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "aspect-ratio": "^2.1.1",
     "aws-sdk": "^2.1275.0",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "framer-motion": "^8.1.9",
     "gle": "^1.0.3",
     "gli": "^0.0.1",
     "mapbox": "^1.0.0-beta10",
