--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "animated": "^0.2.2",
     "aspect-ratio": "^2.1.1",
     "aws-sdk": "^2.1275.0",
-    "axios": "^1.2.1",
-    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
@@ -29,12 +27,10 @@
     "mapbox-gl": "^2.11.1",
     "mongoose": "^6.8.0",
     "next": "13.0.6",
+    "next-optimized-images": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-slick": "^0.29.0",
-    "react-spring": "^9.6.1",
-    "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0",
     "typescript": "4.9.4",
     "use-mapbox-gl": "^2.2.2"
