--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gli": "^0.0.1",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^2.11.1",
+    "mongodb": "^5.1.0",
     "mongoose": "^6.8.0",
     "next": "13.0.6",
     "next-optimized-images": "^2.6.2",
