--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "sharp": "^0.32.2",
     "tailwind": "^4.0.0",
     "typescript": "4.9.4",
     "use-mapbox-gl": "^2.2.2"
