--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx", "pages/_app.tsx", "pages/about.tsx", "components/Slider.tsx", "components/Hero.tsx", "components/Contact.tsx", "components/About.jsx", "components/Card.tsx", "pages/index.jsx", "pages/contact.jsx", "components/SliderData.tsx", "components/Navbar.tsx", "pages/services.jsx", "s3.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx", "pages/_app.tsx", "pages/about.tsx", "components/Slider.tsx", "components/Hero.tsx", "components/Contact.tsx", "components/About.jsx", "components/Card.tsx", "pages/index.jsx", "pages/contact.jsx", "components/SliderData.tsx", "components/Navbar.tsx", "pages/services.tsx", "s3.tsx"],
   "exclude": ["node_modules"]
 }
